Minimum ram - otherwise the node process is killed

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,6 +46,10 @@
 		}
 	},
 
+	"hostRequirements": {
+		"memory": "8gb"
+	},
+	 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
 
