Just use master database

--- a/health-path/appsettings.json
+++ b/health-path/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "server=localhost;database=ApplicationDB;UID=sa;PWD=P@ssw0rd;MultipleActiveResultSets=True;"
+    "Database": "server=localhost;database=master;UID=sa;PWD=P@ssw0rd;MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*",
   "LnhpdBaseUrl": "https://health-products.canada.ca/api/natural-licences"
